apps/vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-vault-ui
  namespace: vault
spec:
  ingressClassName: traefik
  rules:
    - host: vault.whatsoever.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault-vault-ui
                port:
                  number: 8200
